--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: build
 on: [push]
 jobs:
   check-bats-version:
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Hola"
 
