--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,6 @@ jobs:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS }}
       - run: docker build -t raagpc/raag_gif_converter:0.9.1 . 
+      - run: docker push raagpc/raag_gif_converter:0.9.1
       - run: docker-compose -f docker-compose.yml up -d --force-recreate
 
